--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://postgres:postgres@localhost:5432/crop_recommendation?schema=public"
+DATABASE_URL="postgresql://postgres:postgres@crop-recommendation-db:5432/crop_recommendation?schema=public"
 JWTAUTHPORT=3000
-DBURI='mongodb+srv://root:root@jwt-auth.twadlad.mongodb.net/?retryWrites=true&w=majority'
+DBURI='mongodb://crop-recommendation-mongo:27017/'
 JWTSECRET=q706rnzs4zGbaLu2jltA
