--- a/.env
+++ b/.env
@@ -6,5 +6,6 @@
 
 DATABASE_URL="postgresql://postgres:postgres@localhost:5432/crop_recommendation?schema=public"
 JWTAUTHPORT=3000
-DBURI='mongodb://localhost:27017/'
+DBURI='mongodb://root:root@localhost:27017/cropdata?authSource=admin'
+#DBURI='mongodb://localhost:27017/'
 JWTSECRET=q706rnzs4zGbaLu2jltA
